@@ -994,7 +994,6 @@ pi ; ==> 3.141592653589793
 ; - define/ defun/ defmacro only work as top level forms, use as non-toplevel form
 ;   will throw a "not-yet-implemented" compiler error.
 ; - define-ing an already define-d symbol is not supported
-; - let* dynamic is not supported
 ; - macroexpand-1 is limited to quoted forms
 
 
